liccon mobile RWD (is not finsih)

--- a/licap.html
+++ b/licap.html
@@ -215,8 +215,22 @@
 					<p>ああああああああああああああああああああ</p>
 				</div>
 			</div>
+			<!-- 手機板 -->
 			<div id="liccon-on-mobile">
-				<img id="mobile-main" src="./image/liccon/main.png" alt="">
+				<div id="mobile-zoom">
+					<img class="set-parameter mobile-zone-parameter" src="./image/liccon/img-select-zone-parameter.png" alt="">
+					<img class="set-parameter mobile-dot-parameter" src="./image/liccon/img-select-dot-parameter.png" alt="">
+					<img class="show-playtime mobile-show-playtime" src="./image/liccon/img-playtime.png" alt="">
+					<img class="select-zone mobile-select-zone" src="./image/liccon/img-select-zone.png" alt="">
+				</div>
+				<div class="show-info user-setting mobile-dot" id="user-setting" onclick="zoomThis('user-setting',0,0,1400)"></div>
+				<div class="show-info set-parameter mobile-dot" id="set-parameter" onclick="zoomThis('set-parameter',150,0,750)"></div>
+				<div class="show-info edit-function mobile-dot" id="edit-function" onclick="zoomThis('edit-function',550,140,900)"></div>
+				<div class="show-info show-playtime mobile-dot" id="show-playtime" onclick="zoomThis('show-playtime',170,250,900)"></div>
+				<div class="show-info select-zone mobile-dot" id="select-zone" onclick="zoomThis('select-zone',350,300,900)"></div>
+				<div id="mobile-des" class="mobile-des">
+					ああああああ
+				</div>
 			</div>
 		</section>
 	</main>
