--- a/licap.html
+++ b/licap.html
@@ -222,14 +222,36 @@
 					<img class="set-parameter mobile-dot-parameter" src="./image/liccon/img-select-dot-parameter.png" alt="">
 					<img class="show-playtime mobile-show-playtime" src="./image/liccon/img-playtime.png" alt="">
 					<img class="select-zone mobile-select-zone" src="./image/liccon/img-select-zone.png" alt="">
+					<img class="select-dot mobile-select-dot" src="./image/liccon/img-select-dot.png" alt="">
 				</div>
 				<div class="show-info user-setting mobile-dot" id="user-setting" onclick="zoomThis('user-setting',0,0,1400)"></div>
 				<div class="show-info set-parameter mobile-dot" id="set-parameter" onclick="zoomThis('set-parameter',150,0,750)"></div>
 				<div class="show-info edit-function mobile-dot" id="edit-function" onclick="zoomThis('edit-function',550,140,900)"></div>
 				<div class="show-info show-playtime mobile-dot" id="show-playtime" onclick="zoomThis('show-playtime',170,250,900)"></div>
 				<div class="show-info select-zone mobile-dot" id="select-zone" onclick="zoomThis('select-zone',350,300,900)"></div>
+				<div class="show-info select-dot mobile-dot" id="select-dot" onclick="zoomThis('select-dot',450,270,900)"></div>
 				<div id="mobile-des" class="mobile-des">
 					ああああああ
+				</div>
+			</div>
+		</section>
+		<section id="liccon-download">
+			<h5>Download</h5>
+			<div class="download-block">
+				<div class="download-btn">
+					<p>Windows</p>
+					<img class="logo-unhover" src="./image/icon/logo-windows.svg" alt="">
+					<img class="logo-hover" src="./image/icon/logo-windows-01.svg" alt="">
+				</div>
+				<div class="download-btn">
+					<p>Android</p>
+					<img class="logo-unhover" src="./image/icon/logo-windows.svg" alt="">
+					<img class="logo-hover" src="./image/icon/logo-windows-01.svg" alt="">
+				</div>
+				<div class="download-btn">
+					<p>iOS</p>
+					<img class="logo-unhover" src="./image/icon/logo-windows.svg" alt="">
+					<img class="logo-hover" src="./image/icon/logo-windows-01.svg" alt="">
 				</div>
 			</div>
 		</section>
