--- a/licap.html
+++ b/licap.html
@@ -238,20 +238,31 @@
 		<section id="liccon-download">
 			<h5>Download</h5>
 			<div class="download-block">
-				<div class="download-btn">
-					<p>Windows</p>
-					<img class="logo-unhover" src="./image/icon/logo-windows.svg" alt="">
-					<img class="logo-hover" src="./image/icon/logo-windows-01.svg" alt="">
+				<div class="download-btn-block">
+					<div class="download-btn">
+						<p>Windows</p>
+						<img class="logo-unhover" src="./image/icon/logo-windows.svg" alt="">
+						<img class="logo-hover" src="./image/icon/logo-windows-01.svg" alt="">
+					</div>
+					<p class="download-tip-text">Available on win10 </p>
 				</div>
-				<div class="download-btn">
-					<p>Android</p>
-					<img class="logo-unhover" src="./image/icon/logo-windows.svg" alt="">
-					<img class="logo-hover" src="./image/icon/logo-windows-01.svg" alt="">
+				<div class="download-btn-block">
+					<p></p>
+					<div class="download-btn">
+						<p class="logo-unhover">Android</p>
+						<p class="logo-hover">Coming Soon</p>
+						<img class="logo-unhover" src="./image/icon/logo-android.svg" alt="">
+						<!-- <img class="logo-hover" src="./image/icon/logo-windows-01.svg" alt=""> -->
+					</div>
 				</div>
-				<div class="download-btn">
-					<p>iOS</p>
-					<img class="logo-unhover" src="./image/icon/logo-windows.svg" alt="">
-					<img class="logo-hover" src="./image/icon/logo-windows-01.svg" alt="">
+				<div class="download-btn-block">
+					<p></p>
+					<div class="download-btn">
+						<p class="logo-unhover">iOS</p>
+						<p class="logo-hover">Coming Soon</p>
+						<img class="logo-unhover" src="./image/icon/logo-apple.svg" alt="">
+						<!-- <img class="logo-hover" src="./image/icon/logo-windows-01.svg" alt=""> -->
+					</div>
 				</div>
 			</div>
 		</section>
