--- a/licap.html
+++ b/licap.html
@@ -236,23 +236,24 @@
 			</div>
 		</section>
 		<section id="liccon-download">
-			<h5>Download</h5>
+			<h5>Download Now</h5>
 			<div class="download-block">
-				<div class="download-btn-block">
-					<div class="download-btn">
-						<p>Windows</p>
-						<img class="logo-unhover" src="./image/icon/logo-windows.svg" alt="">
-						<img class="logo-hover" src="./image/icon/logo-windows-01.svg" alt="">
-					</div>
-					<p class="download-tip-text">Available on win10 </p>
+				<div style="display: flex;align-items: center;justify-content: center;">
+					<p>Windows 10</p>
+					<img src="./image/icon/logo-windows.svg" alt="">
 				</div>
 				<div class="download-btn-block">
+					<div class="download-btn">
+						<p>Download</p>
+					</div>
+				</div>
+				<!-- <div class="download-btn-block">
 					<p></p>
 					<div class="download-btn">
 						<p class="logo-unhover">Android</p>
 						<p class="logo-hover">Coming Soon</p>
 						<img class="logo-unhover" src="./image/icon/logo-android.svg" alt="">
-						<!-- <img class="logo-hover" src="./image/icon/logo-windows-01.svg" alt=""> -->
+						<img class="logo-hover" src="./image/icon/logo-windows-01.svg" alt="">
 					</div>
 				</div>
 				<div class="download-btn-block">
@@ -261,9 +262,9 @@
 						<p class="logo-unhover">iOS</p>
 						<p class="logo-hover">Coming Soon</p>
 						<img class="logo-unhover" src="./image/icon/logo-apple.svg" alt="">
-						<!-- <img class="logo-hover" src="./image/icon/logo-windows-01.svg" alt=""> -->
+						<img class="logo-hover" src="./image/icon/logo-windows-01.svg" alt="">
 					</div>
-				</div>
+				</div> -->
 			</div>
 		</section>
 	</main>
