--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, target-densityDpi=device-dpi" />
 	<title>About</title>
 	<link rel="stylesheet" href="style/about_style.css">
+	<link rel="stylesheet" href="style/global_style.css">
 </head>
 <body>
     <header id="header">
