outside function is OK

--- a/licap.html
+++ b/licap.html
@@ -217,7 +217,7 @@
 			</div>
 			<!-- 手機板 -->
 			<div id="liccon-on-mobile">
-				<div id="mobile-zoom">
+				<div id="mobile-zoom" onclick="zoomOut()">
 					<img class="set-parameter mobile-zone-parameter" src="./image/liccon/img-select-zone-parameter.png" alt="">
 					<img class="set-parameter mobile-dot-parameter" src="./image/liccon/img-select-dot-parameter.png" alt="">
 					<img class="show-playtime mobile-show-playtime" src="./image/liccon/img-playtime.png" alt="">
