adjust global css and create download page.

--- a/about.html
+++ b/about.html
@@ -17,9 +17,10 @@
 			<a href="index.html"><li>HOME</li></a>
 			<a href="licap.html"><li>LiCAP</li></a>
 			<!-- <li>SLiMTAB</li> -->
+			<a href="download.html"><li>DOWNLOAD</li></a>
 			<a href="about.html"><li id="nav-about-label">ABOUT</li></a>
 			<a href="faq.html"><li>FAQ</li></a>
-			<a href="about.html#footer"><li>CONTACT US</li></a>
+			<a  id="contact-btn" href="about.html#footer"><li>CONTACT US</li></a>
 		</nav>
     </header>
     <main>
