--- a/licap.html
+++ b/licap.html
@@ -16,9 +16,10 @@
 			<a href="index.html"><li>HOME</li></a>
 			<a href="licap.html"><li id="nav-licap-label" >LiCAP</li></a>
 			<!-- <li>SLiMTAB</li> -->
+			<a href="download.html"><li>DOWNLOAD</li></a>
 			<a href="about.html"><li>ABOUT</li></a>
 			<a href="faq.html"><li>FAQ</li></a>
-			<a href="licap.html#footer"><li>CONTACT US</li></a>
+			<a id="contact-btn" href="licap.html#footer"><li>CONTACT US</li></a>
 		</nav>
 	</header>
 	<main>
