--- a/faq.html
+++ b/faq.html
@@ -16,10 +16,11 @@
 		<nav id="header-nav">
             <a href="index.html"><li>HOME</li></a>
 			<a href="licap.html"><li>LiCAP</li></a>
-			<!-- <li>SLiMTAB</li> -->
+            <!-- <li>SLiMTAB</li> -->
+            <a href="download.html"><li>DOWNLOAD</li></a>
 			<a href="about.html"><li>ABOUT</li></a>
 			<a href="faq.html"><li id="nav-faq-label" >FAQ</li></a>
-			<a href="index.html#footer"><li>CONTACT US</li></a>
+			<a  id="contact-btn" href="index.html#footer"><li>CONTACT US</li></a>
 		</nav>
     </header>
     <h1 id="faq-title">FAQ.</h1>
