--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
 			<a href="index.html"><li id="nav-home-label" >HOME</li></a>
 			<a href="licap.html"><li>LiCAP</li></a>
 			<!-- <li>SLiMTAB</li> -->
+			<a href="download.html"><li>DOWNLOAD</li></a>
 			<a href="about.html"><li>ABOUT</li></a>
 			<a href="faq.html"><li>FAQ</li></a>
-			<a href="index.html#footer"><li>CONTACT US</li></a>
+			<a id="contact-btn" href="index.html#footer"><li>CONTACT US</li></a>
 		</nav>
 	</header>
 	<section id="first">
