add download page (and set jump function)

--- a/download.html
+++ b/download.html
@@ -104,6 +104,10 @@
 		}
 	};
 	let home = document.getElementById("nav-home-label");
-	home.classList.add("on-this-page")
+    home.classList.add("on-this-page")
+    
+    if(sessionStorage != ''){
+        let n = sessionStorage.getItem('download-select')
+    }
 </script>
 </html>
