--- a/licap.html
+++ b/licap.html
@@ -154,13 +154,16 @@
 			<!-- 上方提示框 -->
 			<div class="des-block">
 				<div class="info-des user-setting">
-					<p>ああああああああああああああああああああ</p>
+					<p>Preset</p>
+					<p>Click "plus" button to create your own preset or choose default setting to have a quick demonstration</p>
 				</div>
 				<div class="info-des set-parameter">
-					<p>ああああああああああああああああああああ</p>
+					<p>Group Setting</p>
+					<p>Adjust midi cc parameter in detail</p>
 				</div>
 				<div class="info-des edit-function">
-					<p>ああああああああああああああああああああ</p>
+					<p>Tool Bar</p>
+					<p>Click "plus" button and frame the area you want to define, or choose others tool to edit your custom fingerboard</p>
 				</div>
 			</div>
 			<!-- LICCON視窗+開啟點+線 -->
@@ -195,26 +198,32 @@
 				<div class="show-info set-parameter" id="set-parameter" onclick="showThisF('set-parameter')"></div>
 				<!-- 改變圖像 -->
 				<img class="img-change show-playtime" src="./image/liccon/img-playtime.png" alt="">
+				<img class="img-change select-zone select-instrument" src="./image/liccon/img-instrument-select.png" alt="">
 				<img class="img-change select-zone not-show" src="./image/liccon/img-unselect-zone.png" alt="">
 				<img class="img-change select-zone" src="./image/liccon/img-select-zone.png" alt="">
 				<img class="img-change select-zone parameter set-parameter" src="./image/liccon/img-select-zone-parameter.png" alt="">
 				<img class="img-change select-dot not-show" src="./image/liccon/img-unselect-dot.png" alt="">
 				<img class="img-change select-dot" src="./image/liccon/img-select-dot.png" alt="">
+				<!-- <img class="img-change select-dot not-show" src="./image/liccon/img-unselect-sampler.png" alt="">
+				<img class="img-change select-dot" src="./image/liccon/img-select-sampler.png" alt=""> -->
 				<img class="img-change select-dot parameter set-parameter" src="./image/liccon/img-select-dot-parameter.png" alt="">
 			</div>
 			<!-- 下方提示框 -->
 			<div class="des-block">
 				<div class="info-des show-playtime">
 					<!-- <span class="close-btn" onclick="closeThis('show-playtime')"></span> -->
-					<p>ああああああああああああああああああああ</p>
+					<p>Note Display</p>
+					<p>Display every note you play on guitar (send by LiCAP)</p>
 				</div>
 				<div class="info-des select-zone">
 					<!-- <span class="close-btn" onclick="closeThis('select-zone')"></span> -->
-					<p>ああああああああああああああああああああ</p>
+					<p>Instrument Zone</p>
+					<p>each note in the same zone has the same setting above</p>
 				</div>
 				<div class="info-des select-dot">
 					<!-- <span class="close-btn" onclick="closeThis('select-dot')"></span> -->
-					<p>ああああああああああああああああああああ</p>
+					<p>single sampler</p>
+					<p>drop any wav or mp3 file into a single fret, it will play your sample file while you play this fret</p>
 				</div>
 			</div>
 			<!-- 手機板 -->
@@ -233,7 +242,8 @@
 				<div class="show-info select-zone mobile-dot" id="select-zone" onclick="zoomThis('select-zone',350,300,900)"></div>
 				<div class="show-info select-dot mobile-dot" id="select-dot" onclick="zoomThis('select-dot',450,270,900)"></div>
 				<div id="mobile-des" class="mobile-des">
-					ああああああ
+					<p></p>
+					<p></p>
 				</div>
 			</div>
 		</section>
